--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Fuckyou</div>
+   <h1 style="color:rgb(67, 15, 15)">fuckyou</h1>
 </body>
 </html>
