--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table,th,td{
+            border:2px solid blue;
+            border-collapse:collapse
+        }
+th{
+    font-family:'Courier New', Courier, monospace;
+}
+    </style>
 </head>
 <body>
-   <h1 style="color:rgb(67, 15, 15)">fuckyou</h1>
+    <table>
+        <thead>
+            <th>State of health</th>
+            <th colspan="2">Fasting value</th>
+            <th>After remaining</th>
+        </thead>
+        <tbody>
+            <tr>
+                <th> </th>
+                <th>Minimum</th>
+                <th>Normal</th>
+                <th> 2hours of Eating</th>
+            </tr>
+            <tr>
+                <td>healthy</td>
+                <td>70</td>
+                <td>100</td>
+                <td>less than 140</td>     
+             </tr>
+            <tr>
+                <td>pre-diabetes</td> 
+                <td>101</td> 
+                <td>126</td> 
+                <td>140 to 200</td>   
+             </tr>
+            <tr>
+                <td>Diabetes</td>
+                <td>more than 126</td> 
+                <td>Not applicable</td> 
+                <td>More than 200</td>    
+             </tr>
+        </tbody>
+    </table>
 </body>
 </html>
