--- a/index.html
+++ b/index.html
@@ -4,90 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TASKS</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="box">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-                        <h3>Instagram</h3>
-                        <div class="cont">
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam placeat 
-                                repellat, nesciunt voluptas fugit vel quidem facere accusamus maxime.
-                            </span>
-                        </div>
-                        <a href="https://www.instagram.com/" target="_blank">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
-                        <h3>Twitter</h3>
-                        <div class="cont">
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam placeat 
-                                repellat, nesciunt voluptas fugit vel quidem facere accusamus maxime.
-                            </span>
-                        </div>
-                        <a href="https://www.twitter.com/" target="_blank">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
-                        <h3>Facebook</h3>
-                        <div class="cont">
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam placeat 
-                                repellat, nesciunt voluptas fugit vel quidem facere accusamus maxime.
-                            </span>
-                        </div>
-                        <a href="https://www.facebook.com/" target="_blank">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-pinterest fa-3x" aria-hidden="true"></i>
-                        <h3>Pinterest</h3>
-                        <div class="cont">
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam placeat 
-                                repellat, nesciunt voluptas fugit vel quidem facere accusamus maxime.
-                            </span>
-                        </div>
-                        <a href="https://www.pinterest.com/" target="_blank">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-google-plus fa-3x" aria-hidden="true"></i>
-                        <h3>Google</h3>
-                        <div class="cont">
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam placeat 
-                                repellat, nesciunt voluptas fugit vel quidem facere accusamus maxime.
-                            </span>
-                        </div>
-                        <a href="https://www.google.com/" target="_blank">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
-                        <h3>Github</h3>
-                        <div class="cont">
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam placeat 
-                                repellat, nesciunt voluptas fugit vel quidem facere accusamus maxime.
-                            </span>
-                        </div>
-                        <a href="https://www.github.com/" target="_blank">Learn more</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
